--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@
 
 buildscript {
     repositories {
-        jcenter()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        mavenCentral()
         google()
         maven { url "https://jitpack.io" }
         maven {
@@ -12,13 +16,17 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        mavenCentral()
         google()
         maven { url "https://jitpack.io" }
         maven {
