--- a/agentweb-core/build.gradle
+++ b/agentweb-core/build.gradle
@@ -4,11 +4,13 @@ android {
     compileSdkVersion COMPILE_SDK_VERSION.toInteger()
     buildToolsVersion "${BUILD_TOOL_VERSION}"
 
+    def aarVersionName = "1.0.0"
+
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion TARGET_SDK_VERSION.toInteger()
         versionCode 1
-        versionName "1.0.0"
+        versionName aarVersionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -17,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField 'String', 'VERSION_NAME', "\"" + "5.0.0" + "\""
         }
